// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render CharacterEntry -> with empty playerObject prop 1`] = `
<div
  class="container"
>
  <br />
  <div
    class="row"
  >
    <div
      class="col"
    >
      <center>
        <p>
          Pick a character
        </p>
        <br />
      </center>
    </div>
  </div>
</div>
`;

exports[`Render CharacterEntry -> with multiple characters 1`] = `
<div
  class="container"
>
  <br />
  <div
    class="row"
  >
    <div
      class="col"
    >
      <center>
        <p>
          Pick a character
        </p>
        <br />
      </center>
      <center>
        <button
          class="btn btn-secondary"
          type="button"
        >
          Cade Goodbarrel
        </button>
        <br />
        <br />
      </center>
      <center>
        <button
          class="btn btn-secondary"
          type="button"
        >
          Cade Goodbarrel
        </button>
        <br />
        <br />
      </center>
    </div>
  </div>
</div>
`;

exports[`Render CharacterEntry -> with one character 1`] = `
<div
  class="container"
>
  <br />
  <div
    class="row"
  >
    <div
      class="col"
    >
      <center>
        <p>
          Pick a character
        </p>
        <br />
      </center>
      <center>
        <button
          class="btn btn-secondary"
          type="button"
        >
          Cade Goodbarrel
        </button>
        <br />
        <br />
      </center>
    </div>
  </div>
</div>
`;
